# NNToolkitCore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NNToolkitCore.podspec  Package.swift  README.md
Sources/NNToolkitCore/: activation.c  activation_default.c  apple_ops.c  arm_neon_ops.c  arm_neon_ops.h  batch_norm.c  conv_1d.c  conv_1d_default_impl.c  debug.c  dense.c  fft.c  gru.c  gru_2.c  loss.c  lstm.c  operations.c  optimizers.c  recurrent_shared.c  spectrogram.c  time_distributed_dense.c  window.c
Sources/NNToolkitCore/include/: NNToolkitCore.h  activation.h  activation_default.h  batch_norm.h  conv_1d.h  conv_1d_default_impl.h  debug.h  dense.h  fft.h  gru.h  gru_2.h  loops.h  loss.h  lstm.h  operations.h  ops.h  optimizers.h  recurrent_shared.h  spectrogram.h  time_distributed.c  time_distributed.h  time_distributed_dense.h  types.h  window.h
build_scripts/: build_android.sh
nn_toolkit_core/core/: arm_neon_ops.c  debug.h  loop.h  types.h
nn_toolkit_core/include/: nn_toolkit_core.h
nn_toolkit_core/layers/: activation.c  batch_norm.c  conv_1d.c  dense.c  time_distributed_dense.c
nn_toolkit_core/signal/: fft.c  fft.h  spectrogram.c
nn_toolkit_core/train/: optimizers.c
nntoolkitcore/core/: apple_ops.c  arm_neon_ops.c  debug.c  debug.h  default_ops.cc  loop.h  mat_ops.cc  mat_ops.h  memory.c  memory.h  ops.h  types.h
nntoolkitcore/include/: NNToolkitCore.h
nntoolkitcore/layers/: activation.c  activation.h  activation_default.c  activation_default.h  batch_norm.c  batch_norm.h  bidirectional.c  bidirectional.h  conv_1d.c  conv_1d.h  dense.c  dense.h  gru.c  gru.h  gru1.c  gru1.h  gru_2.c  gru_2.h  lstm.c  lstm.h  recurrent.c  recurrent.h  recurrent_base.c  recurrent_base.h  rnn.c  rnn.h  shared.h  time_distributed_dense.c  time_distributed_dense.h
nntoolkitcore/layers/private/: gradient_sum.c  gradient_sum.h  recurrent_private.c  recurrent_private.h  weights_private.c  weights_private.h
nntoolkitcore/signal/: dft.c  dft.h  fft.c  fft.h  log_mel_spectrogram.c  log_mel_spectrogram.h  mel_filterbank.c  mel_filterbank.h  spectrogram.c  spectrogram.h  window.c  window.h
nntoolkitcore/train/: loss.c  loss.h  optimizers.c  optimizers.h
